--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,10 +1,10 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=D:\flutter
-FLUTTER_APPLICATION_PATH=D:\GitHub\markdown_widget
+FLUTTER_ROOT=/Users/justin/Documents/flutter/sdk/flutter
+FLUTTER_APPLICATION_PATH=/Users/justin/Documents/GitHub/markdown_widget
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
-FLUTTER_BUILD_NAME=2.1.0
-FLUTTER_BUILD_NUMBER=2.1.0
+FLUTTER_BUILD_NAME=2.3.1
+FLUTTER_BUILD_NUMBER=2.3.1
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
